--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.2.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.16.0",
-    "yup": "^0.27.0"
+    "yup": "^0.27.0",
+    "yupi": "^1.0.0"
   },
   "scripts": {
     "dev": "nodemon src/server.js"
